--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -22,8 +26,10 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html,body {
+  width: 100%;
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -42,7 +48,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -66,3 +71,50 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+input {
+  background-color: transparent;
+  border: #646cff 1px solid;
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+select {
+  background-color: transparent;
+  border: 1px solid #646cff;
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+select:hover {
+  border-color: #535bf2;
+}
+
+select:focus, select:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+select option {
+  background-color: #242424;
+  color: #ffffff;
+}
+
+/* table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0 auto;
+  border: 1px solid #646cff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+} */
